fixing spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ a:hover span {
 
 #vimeoiframeId {
     position: relative;
-    height:321px;
+    height:301px;
     width:570px;
     padding: 200px;
     border-radius: 50%;
